Fixed overflow on mobile. Closed #49
The percentage positioning was likely rounding up a fraction of a
pixel when positioning it, causing it to stray outside the bounds
of the document and creating an overflow.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -282,7 +282,7 @@ time {
 }
 
 .story-box .title {
-	left: 50%;
+	left: 49%;
 	bottom: 50%;
 	margin: 0;
 	margin-bottom: -1em;
